Add dynamic read status
When the status is clicked, the status UI is updated. This also updates
the value of the corresponding book's read status key value.

--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@
 .card {
     border: 1px solid black;
 }
+
+button.true :first-child, 
+button.false :last-child {
+  background: #000;
+  color: #fff;
+}
