--- a/style.css
+++ b/style.css
@@ -1,10 +1,57 @@
-#card-containter {
+:root {
+    margin: 0;
+    height: 100%;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+body, h1, h2, h3, h4, p {
+    margin: 0;
+}
+
+body {
+    box-sizing: border-box;
+}
+
+#header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 150px;
+}
+
+
+
+#card-container {
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+    padding: 15px;
+    margin: 0px 60px;
+    border: 1px solid red;
 }
 
 .card {
     border: 1px solid black;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
 }
+
+.card h2 {
+    font-size: 35px;
+    font-weight: 400;
+}
+
+.card h3 {
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.card p {
+    font-size: 15px;
+}
+
+
 
 button.true :first-child, 
 button.false :last-child {
