--- a/style.css
+++ b/style.css
@@ -24,17 +24,18 @@ body {
 #card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 15px;
-    padding: 15px;
-    margin: 0px 60px;
+    gap: 30px;
+    padding: 40px;
+    margin: 0px 100px;
     border: 1px solid red;
 }
 
 .card {
     border: 1px solid black;
-    padding: 15px;
+    padding: 15px 25px;
     display: flex;
     flex-direction: column;
+    max-width: 400px;
 }
 
 .card h2 {
@@ -43,15 +44,24 @@ body {
 }
 
 .card h3 {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
+    margin-bottom: 10px;
 }
 
 .card p {
     font-size: 15px;
+    font-style: italic;
 }
 
+.book-info {
+    margin-bottom: 30px;
+}
 
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
 
 button.true :first-child, 
 button.false :last-child {
