--- a/style.css
+++ b/style.css
@@ -1,52 +1,64 @@
 :root {
     margin: 0;
     height: 100%;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-}
-
-body, h1, h2, h3, h4, p {
-    margin: 0;
-}
-
-body {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
+}
+
+body, h1, h2, h3, h4, p, button {
+    margin: 0;
+    padding: 0;
 }
 
 #header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 150px;
+    padding: 30px 250px;
 }
 
-
+#add-book {
+    background-color: transparent;
+    border: 2.5px solid black;
+    border-radius: 5px;
+    height: 45px;
+    font-size: 17px;
+    font-weight: 400;
+    padding: 10px 15px;
+}
 
 #card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: 220px;
     gap: 30px;
     padding: 40px;
     margin: 0px 100px;
-    border: 1px solid red;
+    border: 3px solid black;
+    border-radius: 5px;
+    min-height: 700px;
 }
 
 .card {
-    border: 1px solid black;
+    border: 2px solid black;
+    border-radius: 2px;
     padding: 15px 25px;
     display: flex;
     flex-direction: column;
     max-width: 400px;
+    height: 175px;
 }
 
 .card h2 {
     font-size: 35px;
     font-weight: 400;
+    margin-bottom: 2px;
 }
 
 .card h3 {
     font-size: 20px;
     font-weight: 400;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .card p {
@@ -55,16 +67,53 @@ body {
 }
 
 .book-info {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.buttons :first-child {
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 0;
+    height: 35px;
+    width: 75px;
+    font-size: 13px;
+}
+
+.buttons :last-child {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 135px;
+    height: 35px;
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 0;
+}
+
+.buttons :last-child span {
+    width: 55px;
+    height: 55%;
+    font-size: 13px;
+    border: none;
+    padding: 2px;
 }
 
 button.true :first-child, 
 button.false :last-child {
   background: #000;
   color: #fff;
+  border-radius: 5px;
+}
+
+dialog {
+    height: 400px;
+    width: 600px;
 }
