--- a/style.css
+++ b/style.css
@@ -138,7 +138,8 @@ button.false :last-child {
 /* POP UP BOX */
 dialog {
     height: 400px;
-    width: 350px;
+    width: 315px;
+    padding-bottom: 30px;
 }
 
 #close {
@@ -205,13 +206,9 @@ input[type="text"] {
     font-weight: 400;
 }
 
-input::placeholder {
-    font-size: 16px;
-    color: #555;
-}
-
-input:focus::placeholder {
-    color: transparent;
+#submit:hover {
+    background-color: black;
+    color: white;
 }
 
 input:focus {
@@ -230,7 +227,7 @@ input:focus {
     transform: translate(0, 2px) scale(1);
     transform-origin: top left;
     transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-    color: #6f81a5;
+    color: #777;
     font-size: 16px;
     line-height: 1;
     left: 2px;
